Bin: Draft the `new` command.

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "hoa/dispatcher": "~1.0",
         "hoa/file"      : "~1.0",
         "hoa/http"      : "~1.0",
+        "hoa/protocol"  : "~1.0",
         "hoa/router"    : "~3.0",
         "hoa/xyl"       : "~1.0"
     },
