--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,15 @@
         "source": "https://github.com/jekxyl/jekxyl"
     },
     "require": {
-        "hoa/console"   : "~3.0",
-        "hoa/dispatcher": "~1.0",
-        "hoa/file"      : "~1.0",
-        "hoa/http"      : "~1.0",
-        "hoa/router"    : "~3.0",
-        "hoa/xyl"       : "~1.0"
+        "hoa/console"     : "~3.0",
+        "hoa/dispatcher"  : "~1.0",
+        "hoa/event"       : "~1.0",
+        "hoa/file"        : "~1.0",
+        "hoa/http"        : "~1.0",
+        "hoa/protocol"    : "~1.0",
+        "hoa/router"      : "~3.0",
+        "hoa/stringbuffer": "~1.0",
+        "hoa/xyl"         : "~1.0"
     },
     "autoload": {
         "psr-4": {
